--- a/manifest.json
+++ b/manifest.json
@@ -12,16 +12,19 @@
   "content_scripts": [
     {
       "matches": ["*://*.github.com/*"],
-      "js": ["github_wide.js"]
+      "js": ["page_injection.js"]
     }
   ],
   "browser_action": {
     "default_icon": "icons/wrench.png",
     "default_title": "IBM Tools",
-    "default_popup": "popup/index.html"
+    "default_popup": "index.html"
   },
   "permissions": [
-    "*://*.github.com/*",
-    "storage", "activeTab"
+    "storage", 
+    "activeTab",
+    "contextMenus",
+    "notifications",
+    "*://*.github.com/*"
   ]
 }
